Fix z-index

--- a/resources/assets/less/bem/fixed-bar.less
+++ b/resources/assets/less/bem/fixed-bar.less
@@ -20,7 +20,7 @@
   backface-visibility: hidden;
   position: fixed;
   width: 100%;
-  z-index: 10;
+  z-index: @z-index--fixed-bar;
   display: flex;
   flex-direction: column;
   bottom: 0;
